proj1/test/test_11811806_5.out
Error type A at Line 1: unknown lexeme 01arg
Error type A at Line 1: unknown lexeme 02arg
Error type B at Line 1: Missing closing parenthesis ')'
Error type B at Line 2: Wrong Assign Operation
Error type B at Line 5: Missing semicolon ';'
