proj1/test/test_11811806_5.spl
int main(int 01arg, int 02arg{
    int a > 10;
    int b = 10 > 1;
    if (a > b){
        return a
    } else{
        return b;
    }
}